--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       const FRAME_HEIGHT = 360; // actual height of orb image
 
       const sprite = new Image();
-      sprite.src = "xp-sprite.png"; // confirm this name matches your file
+      sprite.src = "/xp-sprite.png"; // confirm this name matches your file
 
       let mouse = { x: W / 2, y: H / 2, down: false };
       canvas.addEventListener("mousemove", (e) => {
