--- a/index5.html
+++ b/index5.html
@@ -61,7 +61,7 @@
       let H = (canvas.height = window.innerHeight);
 
       const sprite = new Image();
-      sprite.src = "/xp-sprite.png"; // New sprite with 13x 360px x 360px frames
+      sprite.src = "xp-sprite.png"; // New sprite with 13x 360px x 360px frames
 
       const FRAME_COUNT = 13;
       const FRAME_WIDTH = 360;
